--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background: linear-gradient(to right bottom, #a7f3d0, #6ee7b7); /* Degradado suave de fondo */
+            background-color: #1a202c; /* Color de fondo oscuro similar al de la imagen */
             display: flex;
+            flex-direction: column; /* Para que el footer se coloque debajo del contenedor principal */
             justify-content: center;
             align-items: center;
             min-height: 100vh;
@@ -33,6 +34,7 @@
             backdrop-filter: blur(5px); /* Efecto de desenfoque para un look "glassmorphism" */
             -webkit-backdrop-filter: blur(5px);
             animation: fadeIn 0.8s ease-out; /* Animación de entrada */
+            margin-bottom: 2rem; /* Espacio entre el contenedor principal y el footer */
         }
 
         @keyframes fadeIn {
@@ -76,7 +78,7 @@
         }
         .chord-image {
             max-width: 100%;
-            height: auto;
+            object-fit: contain; /* Asegura que la imagen se ajuste completamente dentro del contenedor */
             border-radius: 1rem;
             border: 2px solid #e2e8f0; /* Borde más visible */
             margin-top: 2.5rem; /* Más margen superior */
@@ -141,6 +143,11 @@
         <img id="chord-image" src="./images/C.png" alt="Diagrama de Acorde" class="chord-image fade-in">
         <p id="image-error" class="text-red-500 mt-4 hidden text-sm">Imagen no encontrada para este acorde. Por favor, asegúrate de que el archivo existe en la carpeta `/images`.</p>
     </div>
+
+    <!-- Footer -->
+    <footer class="mt-8 text-center text-gray-400 text-sm p-4">
+        <p>&copy; 2025 Brotes Musicales – Creado y facilitado por Manuel Puebla Vega</p>
+    </footer>
 
     <script>
         // Obtener referencias a los elementos HTML
@@ -248,3 +255,4 @@
     </script>
 </body>
 </html>
+
